--- a/docs/README
+++ b/docs/README
@@ -2,7 +2,7 @@ This document outlines how to rebuild the documentation.
 
 General setup:
 - Install Sphinx, `pip install sphinx` or `apt-get install python-sphinx`
-- Install the theme used for the docs: `pip install sphinx_rtd_theme`
+- Install the theme used for the docs: `pip install furo`
 - Run `python setup.py build_sphinx --source-dir=docs/ --build-dir=docs/build --all-files`
 
 If code files were added, the easiest way to reflect code changes in the
